--- a/bakery-frontend/package.json
+++ b/bakery-frontend/package.json
@@ -15,9 +15,9 @@
     "react-toastify": "^9.1.3"
   },
   "scripts": {
-    "start": "set HOST=0.0.0.0&& react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts start",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
